Show element documentation in markdown format

--- a/openbpm-ui-kit/src/main/resources/io/openbpm/uikit/messages.properties
+++ b/openbpm-ui-kit/src/main/resources/io/openbpm/uikit/messages.properties
@@ -6,5 +6,10 @@
 io.openbpm.uikit.component.bpmnviewer.command/ElementMarkerType=Element marker type
 io.openbpm.uikit.component.bpmnviewer.command/ElementMarkerType.RUNNING_ACTIVITY=Running activity
 
+io.openbpm.uikit.view.documentation/bpmnElementDocumentationView.title=Element documentation
+io.openbpm.uikit.view.documentation/elementId=Id:
+io.openbpm.uikit.view.documentation/elementType=Type:
+
 bpmnViewer.actions.ZoomReset=Zoom reset
+bpmnViewer.actions.showDocumentation=Show documentation
 bpmnViewer.overlays.incidentCount.tooltipMessage=Incidents: %s
