--- a/openbpm-ui-kit/src/main/resources/io/openbpm/uikit/messages.properties
+++ b/openbpm-ui-kit/src/main/resources/io/openbpm/uikit/messages.properties
@@ -11,5 +11,8 @@ io.openbpm.uikit.view.documentation/elementId=Id:
 io.openbpm.uikit.view.documentation/elementType=Type:
 
 bpmnViewer.actions.ZoomReset=Zoom reset
+bpmnViewer.actions.showActivityStatistics=Show activity statistics
+bpmnViewer.actions.hideActivityStatistics=Hide activity statistics
 bpmnViewer.actions.showDocumentation=Show documentation
 bpmnViewer.overlays.incidentCount.tooltipMessage=Incidents: %s
+bpmnViewer.overlays.runningInstanceCount.tooltipMessage=Running process instances: %s
