Add support for Call activity navigation openbpm-platform/openbpm-control#60
1. Add ability to show overlays for called process
2. Add ability to show overlay for called process instances
3. Refactor client part of BpmnViewer

--- a/openbpm-ui-kit/src/main/resources/io/openbpm/uikit/messages.properties
+++ b/openbpm-ui-kit/src/main/resources/io/openbpm/uikit/messages.properties
@@ -16,3 +16,5 @@ bpmnViewer.actions.hideActivityStatistics=Hide activity statistics
 bpmnViewer.actions.showDocumentation=Show documentation
 bpmnViewer.overlays.incidentCount.tooltipMessage=Incidents: %s
 bpmnViewer.overlays.runningInstanceCount.tooltipMessage=Running process instances: %s
+bpmnViewer.overlays.showCalledInstances.tooltipMessage=Show called process instance(s)
+bpmnViewer.overlays.showCalledProcess.tooltipMessage=Show called process
