--- a/openbpm-ui-kit/src/main/resources/io/openbpm/uikit/messages_ru.properties
+++ b/openbpm-ui-kit/src/main/resources/io/openbpm/uikit/messages_ru.properties
@@ -12,3 +12,5 @@ bpmnViewer.actions.hideActivityStatistics=Скрыть статистику ак
 bpmnViewer.actions.showDocumentation=Показать документацию
 bpmnViewer.overlays.incidentCount.tooltipMessage=Инциденты: %s
 bpmnViewer.overlays.runningInstanceCount.tooltipMessage=Запущенные экземпляры процесса: %s
+bpmnViewer.overlays.showCalledInstances.tooltipMessage=Показать вызыванные экземпляры процесса
+bpmnViewer.overlays.showCalledProcess.tooltipMessage=Показать вызываемый процесс
